--- a/src/05-components/_box.scss
+++ b/src/05-components/_box.scss
@@ -16,13 +16,13 @@
 	&:not(.m__btn):not(.m__button) {
 		padding: 1rem;
 	}
-	&:not([class*="x-flx"]) {
+	&:not([class*="-flx"]) {
 		@include flexbox(column, nowrap, flex-start, stretch);
 		> :not([class*="__mB"]):not(:last-child) {
 			// Bottom
 			margin-bottom: var(--gy);
-			&[class*="x-flx"][class*="-wrap"],
-			&[class*="x-flx"][class*="-reverse"],
+			&[class*="-flx"][class*="-wrap"],
+			&[class*="-flx"][class*="-reverse"],
 			&[class*="__gapi"]:not([class*="ngX"]):not([class*="ngY"]):not([class*="__gaping-no"]) {
 				margin-bottom: calc(-1 * (var(--g, 1rem) - var(--gy, 1rem)));
 			}
