--- a/src/05-components/_text.scss
+++ b/src/05-components/_text.scss
@@ -6,7 +6,7 @@
 .x-txt {
 	--wrap: normal;
 	color: var(--ccl, #{color(dark, 0.7)});
-	&:not([class*="x-flx"]):not([class*="x-grd"]):not([class*="__txtAlignF"]) {
+	&:not([class*="-flx"]):not([class*="x-grd"]):not([class*="__txtAlignF"]) {
 		// Flx
 		display: block;
 	}
@@ -14,7 +14,7 @@
 		// Align
 		text-align: left;
 		&:not([class*="__gapi"])
-			> *:not([class*="x-flx"]):not([class*="x-grd"]) {
+			> *:not([class*="-flx"]):not([class*="x-grd"]) {
 			// Gaping
 			display: inline-block;
 		}
